# EchoRead

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.deploy.yml  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
.trellis/spec/frontend/: auth-contracts.md  index.md  original-audio-contracts.md  wsj-worker-pipeline-contracts.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/workspace/warjiang/: index.md  (+1 more)
deploy/: docker-compose.yml
docker/chrome/: Dockerfile
drizzle/: 0000_lowly_whirlwind.sql  0001_add-wsj-worker-tasks.sql  0002_glossy_shatterstar.sql  0003_slimy_leper_queen.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  _journal.json
prisma/: schema.prisma
prisma/prisma/: dev.db  dev.db-journal
scripts/: cleanup-scraped-data.ts  cron-scrape.ts  pipeline-worker.ts  wsj-login.ts
src/app/: actions.ts  globals.css  layout.tsx  page.tsx
src/components/: AppNav.tsx  AppNavClient.tsx  ArticleCard.tsx  AudioRecorder.tsx  LyricSentencePlayer.tsx  SentencePlayer.tsx  TrainingPackPanel.tsx  VocabularyActions.tsx  WordTooltip.tsx
src/db/: schema.ts
src/hooks/: useAudioPlayer.ts  useRecorder.ts
src/lib/: api-auth.ts  db.ts  dictionary.ts
worker/wsj-worker/: Dockerfile  pyproject.toml
worker/wsj-worker/app/: audio.py  config.py  db_queue.py  main.py  models.py  runner.py  scraper.py
worker/wsj-worker/tests/: test_db_queue.py  test_scraper.py
(+96 files in other folders)
