[project]
name = "echoread-wsj-worker"
version = "0.1.0"
description = "EchoRead deterministic WSJ collection worker."
requires-python = ">=3.12,<4.0"
dependencies = [
  "faster-whisper==1.2.1",
  "fastapi==0.124.4",
  "playwright==1.60.0",
  "uvicorn[standard]==0.40.0",
]

[tool.uv]
package = false
